[package]
name = "rp2040-with-lcd-128"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.5"
fugit = "0.3.6"
gc9a01a = "0.1.0"
rp-pico = "0.7.0"
rp2040-hal = "0.8.0"
ssd1306 = "0.7.1"

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

